--- a/img-compress-plugin/build.gradle
+++ b/img-compress-plugin/build.gradle
@@ -6,9 +6,19 @@ repositories {
     jcenter()
 }
 
+
+configurations {
+    provided
+    compile.extendsFrom provided
+}
+
 dependencies {
     compile gradleApi()
+    compile localGroovy()
+    provided 'com.android.tools.build:gradle:3.2.1'
+    compile 'com.tinify:tinify:1.3.1'
 }
+
 
 //publish to local directory
 def versionName = "1.0.0"
