finish tiny compressor

--- a/build.gradle
+++ b/build.gradle
@@ -31,5 +31,5 @@ apply plugin: 'com.kingkingdu.imgcompressplugin'
 imgCompressOpt{
     way="tinypng"
     tinyKeys=["z862z2062RNqg9Tlx7x2S5DVmQZytvxp"]
-    test = true
+    test = false
 }
