--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ buildscript {
         //jcenter模式
 //        classpath 'com.kingkingdu.plugin:img-compressor:1.0.7'
         //本地调试模式则使用
-        classpath 'com.kingkingdu.plugin:img-compress-plugin:1.0.7'
+        classpath 'com.kingkingdu.plugin:img-compress-plugin:1.1.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath 'com.novoda:bintray-release:+'
@@ -34,7 +34,7 @@ task clean(type: Delete) {
 }
 apply plugin: 'img-compressor'
 imgCompressOpt{
-    way="tinypng"//tinypng,pngquant,zopflip
+    way="zopflip"//tinypng,pngquant,zopflip
     tinyKeys=["z862z2062RNqg9Tlx7x2S5DVmQZytvxp"]
     test = false
     whiteFiles=["add_favourite.png","ic_launcher_foreground.xml"]
