complete some log

--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ buildscript {
         classpath 'com.kingkingdu.plugin:img-compress-plugin:1.1.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath 'com.novoda:bintray-release:+'
+        classpath 'com.novoda:bintray-release:0.9'
     }
 }
 
@@ -34,9 +34,9 @@ task clean(type: Delete) {
 }
 apply plugin: 'img-compressor'
 imgCompressOpt{
-    way="zopflip"//tinypng,pngquant,zopflip
+    way="pngquant"//tinypng,pngquant,zopflip
     tinyKeys=["z862z2062RNqg9Tlx7x2S5DVmQZytvxp"]
-    test = false
+    test = true
     whiteFiles=["add_favourite.png","ic_launcher_foreground.xml"]
     minSize=20
 }
