--- a/gradle.properties
+++ b/gradle.properties
@@ -11,5 +11,13 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+publishedGroupId=io.github.duking666
+siteUrl=https://github.com/duking666/ImgCompressPlugin
+gitUrl=https://github.com/duking666/ImgCompressPlugin.git
+developerId=kingking666
+developerName=kingkingdu
+developerEmail=393070314@qq.com
 
-
+licenseName=The Apache Software License, Version 2.0
+licenseUrl=http://www.apache.org/licenses/LICENSE-2.0.txt
+allLicenses=["Apache-2.0"]
