--- a/img-compress-plugin/build.gradle
+++ b/img-compress-plugin/build.gradle
@@ -13,33 +13,14 @@ configurations {
 }
 
 dependencies {
-    compile gradleApi()
-    compile localGroovy()
-    provided 'com.android.tools.build:gradle:3.0.0'
-    compile 'com.tinify:tinify:1.3.1'
+    implementation gradleApi()
+    implementation localGroovy()
+    compileOnly 'com.android.tools.build:gradle:3.0.0'
 }
-
-
-//publish to local directory
-def versionName = "1.1.4"
-group "com.kingkingdu.plugin"
-version versionName
-
-uploadArchives{ //当前项目可以发布到本地文件夹中
-    repositories {
-        mavenDeployer {
-            repository(url: uri('./repo')) //定义本地maven仓库的地址
-        }
-    }
+ext {
+    artifact = 'ImgCompressPlugin'
+    libraryName = 'ImgCompressPlugin For Android'
+    libraryDescription = 'An Android gradle plugin that scans the resource directory in the project and performs batch image compression.'
+    libraryVersion = '1.1.5'
 }
-apply plugin: 'com.novoda.bintray-release'//添加
-
-//添加
-publish {
-    userOrg = 'kingkingdu'//bintray.com用户名
-    groupId = 'com.kingkingdu.plugin'//jcenter上的路径,跟maven的package对应
-    artifactId = 'img-compressor'//项目名称
-    publishVersion = versionName//版本号
-    desc = 'a android plugin for compress image'//描述
-    website = 'https://github.com/duking666/ImgCompressPlugin'//网站，最好有，不重要
-}
+apply from: '../maven-publish.gradle'
