fix issue#5(Could not create task ' imgCompressTask' ) to support gradle.version >=6.0;release version 1.2.0

--- a/build.gradle
+++ b/build.gradle
@@ -6,15 +6,19 @@ buildscript {
         google()
         jcenter()
         maven{
-            url '/Users/kingkingdu/work/demo/ImgCompressPlugin/img-compress-plugin/repo/'
+            //本地调试仓库
+            url '/Users/code/ImgCompressPlugin/Repo'
         }
         mavenCentral()
+//        maven{
+//            url 'https://s01.oss.sonatype.org/content/repositories/releases/'
+//        }
     }
     dependencies {
         //插件本身的gradle.tool版本尽可能低,这样项目使用gradle一般就能向下兼容,不至于下载新的gradle版本
-        classpath 'com.android.tools.build:gradle:3.0.0'
+        classpath 'com.android.tools.build:gradle:4.1.3'
         //mavenCentral模式
-        classpath 'io.github.duking666:ImgCompressPlugin:1.1.5'
+        classpath 'io.github.duking666:ImgCompressPlugin:1.2.0'
         //本地调试模式则使用
 //        classpath 'com.kingkingdu.plugin:img-compress-plugin:1.1.3'
         // NOTE: Do not place your application dependencies here; they belong
