--- a/img-compress-plugin/build.gradle
+++ b/img-compress-plugin/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     implementation gradleApi()
     implementation localGroovy()
     compileOnly 'com.android.tools.build:gradle:3.0.0'
+    implementation 'com.tinify:tinify:1.3.1'
 }
 ext {
     artifact = 'ImgCompressPlugin'
